Изменил логику реализации в метод getItemsByOwnerId в класс ItemServiceImpl